@startuml
title US605 Class Diagram - Web Controller Version

skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10

skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
  FontSize 12
}

HTTPClient -- RoomMonitoringWebController : >
RoomMonitoringWebController -- RoomRepository : >
RoomRepository -- RoomCrudRepo : >
RoomRepository -- Room : >
Room -- ReadingUtils : >

class RoomMonitoringWebController{
RoomRepository;
getCurrentRoomTemperature(String)
}

class RoomRepository{
RoomCrudRepo;
String;
getCurrentRoomTempByRoomId(String)
}

class RoomCrudRepo{
String;
findByRoomName(String)
}

class Room{
getCurrentRoomTemperature()
getRoomSensorsOfGivenType(String)
getReadings(List<RoomSensor>)
}

class ReadingUtils{
List<Reading>;
getMostRecentValue(List<Reading>)
getMostRecentReading(List<Reading>)
}

@enduml